edited the file

--- a/registrationForm.html
+++ b/registrationForm.html
@@ -1,52 +1,22 @@
-<html>
-    <head>
-    <title>Registration Form..</title>
-    <link rel="stylesheet" href="style.css"/>
-    <script type="text/javascript" src="register.js"></script>
-    </head>
-    <body>
-        <div class="outerContainer">
-            <div class="header">
-                <h3>Registration Form</h3>
-            </div>
-            <div class="innerContainer">
-                <h5>Registration Form</h5>
-                    <form name="registerform">
-                        <ul>
-                            <li>
-                            <label>First Name:</label>
-                                <input type="text" id="first" onKeyup="validate()"> <div id="errFirst"></div>
-                            </li>
-                            <li>
-                            <label>Last Name:</label>
-                                <input type="text" id="last" onkeyup="validate()"> <div id="errLast"></div>
-                            </li>
-                            <li>
-                            <label>e-mail id:</label>
-                                <input type="text" id="email" onkeyup="validate()"> <div id="errEmail"></div>
-                            </li>
-                            <li>
-                            <label>User Id:</label>
-                                <input type="text" id="uid" onkeyup="validate()"><div id="errUid"></div> 
-                            </li>
-                            <li>
-                            <label>Password:</label>
-                                <input type="password" id="pwd" onkeyup="validate()"> <div id="errPwd"></div>
-                            </li>
-                            <li>
-                            <label>Confirm Password:</label>
-                                <input type="password" id="confirm" onkeyup="validate()"> <div id="errConfirm"></div>
-                            </li>
-                            <li>
-                                <input type="button" value="register" id="create" onclick="validate(); finalValidate();"><div id="errFinal"></div>
-                            </li>
-                        </ul>
-                    </form>
-                    
-            </div>
-            <div class="footer">
-                <h5>Copy rights @2017</h5>
-            </div>
-        </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaSccript Form Validation</title>
+</head>
+<body>
+    <h1>Welcome to the form</h1>
+    <form>
+        Name: <input type="text" name="fname"><br><br>
+        Email: <input type="email" name="femail"><br><br>
+        Phone: <input type="Phone" name="fphone"><br><br>
+        Password: <input type="password" name="fpassword"><br><br>
+        Submit: <input type="submit" >
+
+
+
+    </form>
+</body>
 </html>
