--- a/registrationForm.html
+++ b/registrationForm.html
@@ -12,7 +12,8 @@
         Name: <input type="text" name="fname"><br><br>
         Email: <input type="email" name="femail"><br><br>
         Phone: <input type="Phone" name="fphone"><br><br>
-        Password: <input type="password" name="fpassword"><br><br>
+        Password: <input type="password" name="fpass"><br><br>
+        Confirm Password: <input type="password" name="fcpass"><br><br>
         Submit: <input type="submit" >
 
 
